<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/infoText"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:fontFamily="@font/segoeuiitalic"


            android:gravity="center"
            android:text="@string/settingsTitle"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_male_checked"
            android:padding="18dp"
            android:text="@string/Edit_Profile_btn"
            android:textAllCaps="false"
            android:textColor="@color/titleWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


        </LinearLayout>


        <Button
            android:id="@+id/notifySettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_male_selector"
            android:padding="18dp"
            android:text="@string/notifySettings"
            android:textAllCaps="false"
            android:textColor="@color/textBlack" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="100dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/logOut"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:padding="18sp"
            android:paddingBottom="20dp"
            android:text="@string/Log_Out"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/titleWhite">


        </Button>


    </LinearLayout>


</LinearLayout>